objects/Quote_Line_Change_Detail__c/Quote_Line_Change_Detail__c.object-meta.xml
<CustomObject>
    <label>Quote Line Change Detail</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Change Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>