objects/Quote_Line_Change_Detail__c/fields/Contract_Price_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price_Id__c</fullName>
    <label>Contract Price Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>