objects/Quote_Line_Change_Detail__c/fields/Contracted_Discount__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Discount__c</fullName>
    <label>Contracted Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>