objects/Quote_Line_Change_Detail__c/fields/Contracted_Discount_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Discount_Schedule__c</fullName>
    <label>Contracted Discount Schedule</label>
    <length>200</length>
    <type>Text</type>
</CustomField>