objects/Quote_Line_Change_Detail__c/fields/Mass_Price_Update__c.field-meta.xml
<CustomField>
    <fullName>Mass_Price_Update__c</fullName>
    <label>Mass Price Update</label>
    <length>200</length>
    <type>Text</type>
</CustomField>