objects/Quote_Line_Change_Detail__c/fields/New_CP_Discount__c.field-meta.xml
<CustomField>
    <fullName>New_CP_Discount__c</fullName>
    <label>New CP Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>