objects/Quote_Line_Change_Detail__c/fields/New_CP_Discount_Schedule__c.field-meta.xml
<CustomField>
    <fullName>New_CP_Discount_Schedule__c</fullName>
    <label>New CP Discount Schedule</label>
    <length>200</length>
    <type>Text</type>
</CustomField>