objects/Quote_Line_Change_Detail__c/fields/Quote_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Id__c</fullName>
    <label>Quote Line Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>