objects/Quote_Line_Change_Detail__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Quote Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>