objects/Quote_Line_Change_Detail__c/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <label>Quote Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>