objects/Quote_Line_Change_Detail__c/fields/Source_Quote__c.field-meta.xml
<CustomField>
    <fullName>Source_Quote__c</fullName>
    <label>Source Quote</label>
    <length>200</length>
    <type>Text</type>
</CustomField>